# puzzlebot-visual-servoing

./: .gitignore  PROJECT_OVERVIEW.md  PROYECTO_EXPLICACION.md  README.md  RUNBOOK.md  cyclonedds_jetson.xml  cyclonedds_laptop.xml  env_jetson.sh  env_laptop.sh
jetson/puzzlebot_perception/: package.xml  setup.cfg  setup.py
jetson/puzzlebot_perception/config/: vision_hsv.yaml
jetson/puzzlebot_perception/launch/: perception.launch.py
jetson/puzzlebot_perception/puzzlebot_perception/: hsv_calibrator.py  vision_node.py
laptop/puzzlebot_control/: package.xml  setup.py
laptop/puzzlebot_control/config/: mpc_params.yaml
laptop/puzzlebot_control/launch/: control.launch.py
laptop/puzzlebot_control/puzzlebot_control/: mpc_node.py  visualizer_node.py
scripts/: emergency_stop.sh  run_calibrator.sh  run_demo_tmux.sh  stop_demo.sh
shared/puzzlebot_msgs/: CMakeLists.txt  package.xml
shared/puzzlebot_msgs/msg/: VisionState.msg
